--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
     </style>
   </head>
   <body>
-    <!-- <div class="google-map">
-        <iframe src="[your unique google URL] " width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-   </div> -->
+   
 
     <h1>This is my Google Maps web page</h1>
+    <p>Testing Google Map </p>
   
 
     <div class="google-map">
